--- a/day5/Cargo.toml
+++ b/day5/Cargo.toml
@@ -3,7 +3,12 @@ name = "day5"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 nom = { workspace = true }
+
+[dev-dependencies]
+criterion = { workspace = true }
+
+[[bench]]
+name = "bench_day5"
+harness = false
