--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ members = ["day*"]
 
 resolver = "2"
 
+[profile.release]
+debug = true
+
 [workspace.dependencies]
 nom = "7.1.3"
 criterion = "0.5.1"
